--- a/src/MusicCrawler.Frontend/Components/Pages/Artists.razor
+++ b/src/MusicCrawler.Frontend/Components/Pages/Artists.razor
@@ -1,5 +1,5 @@
 ﻿@page "/artists"
-@using MusicCrawler.Lib
+@using MusicCrawler.Interfaces
 @attribute [StreamRendering]
 
 @inject ArtistApiClient ArtistApi
